--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material-nextjs": "^5.15.11",
     "@reduxjs/toolkit": "^2.2.4",
     "cookies-next": "^4.2.1",
+    "firebase": "^10.12.3",
     "formik": "^2.4.6",
     "next": "14.2.3",
     "next-navigation": "^1.0.6",
