--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "@mui/material-nextjs": "^5.15.11",
-    "@reduxjs/toolkit": "^2.2.4",
+    "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.2",
     "cookies-next": "^4.2.1",
     "firebase": "^10.12.3",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "next-navigation": "^1.0.6",
     "react": "^18",
@@ -35,6 +37,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -50,7 +53,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "npm-check-updates": "^16.14.20",
     "prettier": "^3.2.5",
-    "typescript": "^5"
+    "typescript": "5.5.3"
   },
   "browserslist": {
     "production": [
