--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "cookies-next": "^4.2.1",
-    "firebase": "^10.12.3",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
@@ -30,6 +29,8 @@
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.0",
     "react-redux": "^9.1.2",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "sass": "^1.76.0",
     "swiper": "^11.1.4",
     "yup": "^1.4.0",
@@ -42,6 +43,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-google-recaptcha": "^2.1.9",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8",
