--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
     "sass": "^1.76.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.4",
     "yup": "^1.4.0",
     "yup-phone": "^1.3.2"
